# fat16-reader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common/: chs.cpp  chs.hpp
fat/: bootsector.cpp  bootsector.hpp  directory.cpp  directory.hpp  entry.cpp  entry.hpp  filesystem.cpp  filesystem.hpp
log/: logger.cpp  logger.hpp
mbr/: mbr.cpp  mbr.hpp
